[package]
name = "tslab"
version = "0.1.0"
authors = ["Krzysztof Langner <klangner@gmail.com>"]
description = "Online tool for Time Series analysis"
license = "MIT OR Apache-2.0"
repository = "https://github.com/timeserieslab/tslab"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3.4"